--- a/KidsAR-Android/build.gradle
+++ b/KidsAR-Android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.novoda:bintray-release:0.8.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,9 +20,25 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    userOrg = 'yarolegovich'
+    groupId = 'com.yarolegovich'
+    uploadName = 'DiscreteScrollView'
+    description = 'A scrollable list of items that centers the current element and provides easy-to-use APIs for cool item animations.'
+    publishVersion = '1.4.7'
+    licences = ['Apache-2.0']
+
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+    targetSdkVersion = 27
+
+    supportLibVersion = '27.1.0'
 }
