--- a/KidsAR-Android/app/src/main/AndroidManifest.xml
+++ b/KidsAR-Android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:normalScreens="true"
         android:smallScreens="true"
         android:xlargeScreens="true" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:name=".utils.MyApplication"
         android:allowBackup="true"
