--- a/KidsAR-Android/app/build.gradle
+++ b/KidsAR-Android/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
+    implementation project(':circleimageview')
 }
 
 android {
