In App Purchase Classes Added.

--- a/KidsAR-Android/app/src/main/AndroidManifest.xml
+++ b/KidsAR-Android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.android.vending.BILLING" />
     <application
         android:name=".utils.MyApplication"
         android:allowBackup="true"
