--- a/KidsAR-Android/app/build.gradle
+++ b/KidsAR-Android/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
     implementation project(':circleimageview')
+    implementation 'com.android.billingclient:billing:1.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
 
 android {
