--- a/KidsAR-Android/app/src/main/AndroidManifest.xml
+++ b/KidsAR-Android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 android:name="unityplayer.UnityActivity"
                 android:value="true" />
         </activity>-->
-        <activity android:label="@string/app_name" android:noHistory="true"  android:screenOrientation="portrait" android:launchMode="singleTask" android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale|layoutDirection|density" android:name="com.deemsysinc.kidsar.UnityPlayerActivity" >
+        <activity android:label="@string/app_name"   android:screenOrientation="portrait" android:launchMode="singleTask" android:noHistory="true"  android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale|layoutDirection|density" android:name="com.deemsysinc.kidsar.UnityPlayerActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -48,7 +48,7 @@
             <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
         </activity>
         <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="true" />
-        <meta-data android:name="unity.build-id" android:value="9154e09f-9b00-42a6-9b05-5bd52b9ce447" />
+        <meta-data android:name="unity.build-id" android:value="2d931fb5-1ff5-4489-9ef2-6cde5c755437" />
         <meta-data android:name="unity.splash-mode" android:value="0" />
         <meta-data android:name="unity.splash-enable" android:value="True" />
         <meta-data android:name="android.max_aspect" android:value="2.1" />
