--- a/KidsAR-Android/app/build.gradle
+++ b/KidsAR-Android/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation project(':circleimageview')
     implementation 'com.android.billingclient:billing:1.1'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'nl.dionsegijn:konfetti:1.1.2'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.41'
 }
 
 android {
