--- a/KidsAR-Android/app/build.gradle
+++ b/KidsAR-Android/app/build.gradle
@@ -9,6 +9,10 @@ allprojects {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
+
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -16,9 +20,11 @@ dependencies {
     implementation(name: 'google_ar_required', ext: 'aar')
     implementation(name: 'unityandroidpermissions', ext: 'aar')
     implementation(name: 'unitygar', ext: 'aar')
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation(name: 'UnityAds', ext: 'aar')
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation project(':libraryScroll')
     implementation files('libs/activation.jar')
@@ -29,17 +35,22 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'nl.dionsegijn:konfetti:1.1.2'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.41'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
+
+
+
 }
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.deemsysinc.kidsar"
         minSdkVersion 25
-        targetSdkVersion 27
-        versionCode 2
+        targetSdkVersion 28
+        versionCode 4
         versionName "1.0"
     }
 
